# vault-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/auth/: mod.rs  service.rs
src/cache/: mod.rs  service.rs
src/cert/: cache.rs  create.rs  export.rs  listing.rs  lookup.rs  metadata.rs  mod.rs  parser.rs  revoke.rs  serial.rs  service.rs  show.rs  sign.rs
src/cli/: args.rs  commands.rs  completions.rs  mod.rs
src/crypto/: encryption.rs  keys.rs  mod.rs
src/storage/: local.rs  metadata.rs  mod.rs
src/utils/: cert_utils.rs  dns_discovery.rs  errors.rs  mod.rs  output.rs  paths.rs  pem.rs
src/vault/: auth.rs  certificates.rs  client.rs  mod.rs  mounts.rs  pki.rs  wrapper.rs
