[package]
name = "vault-rs"
version = "1.0.0"
edition = "2021"
authors = ["Vault CLI Team"]
description = "A secure Vault PKI management tool for sysadmins"

[[bin]]
name = "vault-rs"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "rustls-tls-native-roots"], default-features = false }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Certificate parsing
x509-parser = "0.17"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Cryptography
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"

# System integration
dirs = "6"
rpassword = "7"
which = "8"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DNS resolution
trust-dns-resolver = "0.23"
ordermap = "0.5.8"